Fixed the build Filtered the JavaResult so that the Mule Message can't be added to it Switched to Maven 3.x for building the project